--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,28 +1,40 @@
-name: Test
+name: Tests
 
 on:
-  push:
-    branches:
-      - main
-      - dev
-  pull_request:
+  - push
+  - pull_request
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - uses: cachix/install-nix-action@v13
-      - uses: cachix/cachix-action@v10
+      - name: Install Foundry
+        uses: onbjerg/foundry-toolchain@v1.0.6
         with:
-          name: dapp
+          version: nightly
+
+      - name: Install node
+        uses: actions/setup-node@v2
+
+      - name: Clone repo with submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install yarn
+        run: npm i -g yarn
 
       - name: Install dependencies
-        run: nix-shell --run 'make'
+        run: make
+
+      - name: Show Foundry config
+        run: forge config
+        
+      - name: Check contracts are linted
+        run: yarn lint:check
 
       - name: Run tests
-        run: nix-shell --run 'make test'
         env:
           ALCHEMY_API_KEY: "${{ secrets.ALCHEMY_API_KEY }}"
+        run: make test
