🎍 Use dapp for debugging and snapshot

--- a/foundry.toml
+++ b/foundry.toml
@@ -12,5 +12,8 @@ gas_reports = ["*"]
 
 verbosity = 1
 
+sender = '0xf1A7dA0000000000000000000000000000000000'
+tx_origin = '0xf1A7dA0000000000000000000000000000000000'
+
 [ci]
 verbosity = 4
